--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
-
-<div>
-  <p>Orthondontie Saint Louis</p>
-</div>
+<header class="container">
+<section class="content">
+  <h1 >Orthondontie Saint Louis</h1>
+</section>
+</header>
