--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,24 +1,46 @@
+<nav class="navbar">
+            <a href="#" class="nav-logo">Menu</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Qui nous sommes?</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Service</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Tarifs</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Contact</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
 <header class="container">
-<section class="content">
-  <h1 >Orthondontie Saint Louis</h1>
-  <p class="sub-title">ouverture septembre 2021</p>
-  <p><a class="doctolib_btn" href="https://www.doctolib.fr/orthodontiste/versailles/claire-masi?utm_campaign=website-button&amp;utm_source=claire-masi-website-button&amp;utm_medium=referral&amp;utm_content=option-5&amp;utm_term=claire-masi"target="_blank" data-reactroot=""><span style="font-size:13px">Prendre rendez-vous en ligne</span><img style="height:15px;margin-bottom:3px;vertical-align:middle;width:auto" src="https://pro.doctolib.fr/external_button/doctolib-white-transparent.png" alt="Doctolib"/></a>
-</div></a></p>
-  <div id="more-content" class="shown" style="display: block;">
-        <blockquote>
-        Situé en plein coeur de dkl vmpds vd^mvd ^pv vdfk vdfmo vf vop vemop vpv p vpife vfpo efpojvf poefn veopne fipnve epov fepoifv fe.
-        emopve vfe
-        </blockquote>
-        <blockquote>
-        Fitts' law is centered around a mathematical equation that is used to illustrate the time it takes to reach a target object.
-        A target object, in the context of UIs, can be any interactive element, such as a submit button, a hyperlink, and an input field in a web form.
-        The idea is this: The quicker you can reach a target object, the more convenient and easy it is to use.
-        </blockquote>
-        <blockquote>
-        Visual weight revolves around the idea that distinct elements in a design have varying heaviness relative to each other.
-        Sometimes visual weight is obvious, such as in the case where larger objects appear heavier than smaller objects because they take up more space.
-        In certain instances, it’s not so cut and dry, such as in the case of color. Some colors may look as if they are heavier and more dominant than others.
-        </blockquote>
-      </div>
-</section>
+
+  <section class="content">
+    <h1 >Orthondontie Saint Louis</h1>
+    <p class="sub-title">ouverture septembre 2021</p>
+    <p><a class="doctolib_btn" href="https://www.doctolib.fr/orthodontiste/versailles/claire-masi?utm_campaign=website-button&amp;utm_source=claire-masi-website-button&amp;utm_medium=referral&amp;utm_content=option-5&amp;utm_term=claire-masi"target="_blank" data-reactroot=""><span style="font-size:13px">Prendre rendez-vous en ligne</span><img style="height:15px;margin-bottom:3px;vertical-align:middle;width:auto" src="https://pro.doctolib.fr/external_button/doctolib-white-transparent.png" alt="Doctolib"/></a>
+    <div id="more-content" class="shown" style="display: block;">
+      <blockquote>
+      Situé en plein coeur de dkl vmpds vd^mvd ^pv vdfk vdfmo vf vop vemop vpv p vpife vfpo efpojvf poefn veopne fipnve epov fepoifv fe.
+      emopve vfe
+      </blockquote>
+      <blockquote>
+      Fitts' law is centered around a mathematical equation that is used to illustrate the time it takes to reach a target object.
+      A target object, in the context of UIs, can be any interactive element, such as a submit button, a hyperlink, and an input field in a web form.
+      The idea is this: The quicker you can reach a target object, the more convenient and easy it is to use.
+      </blockquote>
+      <blockquote>
+      Visual weight revolves around the idea that distinct elements in a design have varying heaviness relative to each other.
+      Sometimes visual weight is obvious, such as in the case where larger objects appear heavier than smaller objects because they take up more space.
+      In certain instances, it’s not so cut and dry, such as in the case of color. Some colors may look as if they are heavier and more dominant than others.
+      </blockquote>
+    </div>
+  </section>
 </header>
