--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,18 +1,18 @@
 <nav class="navbar">
-  <a href="#" class="nav-logo">Menu</a>
+  <a class="doctolib_btn" href="https://www.doctolib.fr/orthodontiste/versailles/claire-masi?utm_campaign=website-button&amp;utm_source=claire-masi-website-button&amp;utm_medium=referral&amp;utm_content=option-5&amp;utm_term=claire-masi"target="_blank" data-reactroot=""><span style="font-size:13px">Prendre rendez-vous en ligne</span><img style="height:15px;margin-bottom:3px;vertical-align:middle;width:auto" src="https://pro.doctolib.fr/external_button/doctolib-white-transparent.png" alt="Doctolib"/></a>
   <ul class="nav-menu">
-      <li class="nav-item">
-          <a href="#" class="nav-link">Qui nous sommes?</a>
-      </li>
-      <li class="nav-item">
-          <a href="#" class="nav-link">Service</a>
-      </li>
-      <li class="nav-item">
-          <a href="#" class="nav-link">Tarifs</a>
-      </li>
-      <li class="nav-item">
-          <a href="#" class="nav-link">Contact</a>
-      </li>
+    <li class="nav-item">
+      <a href="#" class="nav-link">Qui nous sommes?</a>
+    </li>
+    <li class="nav-item">
+      <a href="#" class="nav-link">Service</a>
+    </li>
+    <li class="nav-item">
+      <a href="#" class="nav-link">Tarifs</a>
+    </li>
+    <li class="nav-item">
+      <a href="#" class="nav-link">Contact</a>
+    </li>
   </ul>
   <div class="hamburger">
       <span class="bar"></span>
@@ -25,7 +25,6 @@
   <section class="content">
     <h1 >Orthondontie Saint Louis</h1>
     <p class="sub-title">ouverture septembre 2021</p>
-    <p><a class="doctolib_btn" href="https://www.doctolib.fr/orthodontiste/versailles/claire-masi?utm_campaign=website-button&amp;utm_source=claire-masi-website-button&amp;utm_medium=referral&amp;utm_content=option-5&amp;utm_term=claire-masi"target="_blank" data-reactroot=""><span style="font-size:13px">Prendre rendez-vous en ligne</span><img style="height:15px;margin-bottom:3px;vertical-align:middle;width:auto" src="https://pro.doctolib.fr/external_button/doctolib-white-transparent.png" alt="Doctolib"/></a>
     <div id="more-content" class="shown" style="display: block;">
       <blockquote>
       Situé en plein coeur de dkl vmpds vd^mvd ^pv vdfk vdfmo vf vop vemop vpv p vpife vfpo efpojvf poefn veopne fipnve epov fepoifv fe.
