--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <a class="doctolib_btn" href="https://www.doctolib.fr/orthodontiste/versailles/claire-masi?utm_campaign=website-button&amp;utm_source=claire-masi-website-button&amp;utm_medium=referral&amp;utm_content=option-5&amp;utm_term=claire-masi"target="_blank" data-reactroot=""><span style="font-size:13px">Prendre rendez-vous en ligne</span><img style="height:15px;margin-bottom:3px;vertical-align:middle;width:auto" src="https://pro.doctolib.fr/external_button/doctolib-white-transparent.png" alt="Doctolib"/></a>
+  <a class="doctolib_btn" href="https://www.doctolib.fr/orthodontiste/versailles/claire-masi?utm_campaign=website-button&amp;utm_source=claire-masi-website-button&amp;utm_medium=referral&amp;utm_content=option-5&amp;utm_term=claire-masi"target="_blank" data-reactroot=""><span style="font-size:13px">Prendre rendez-vous</span></a>
   <ul class="nav-menu">
     <li class="nav-item">
       <a href="#" class="nav-link">Qui nous sommes?</a>
